--- a/src/app/shared/components/heartBeat/heartBeat.component.html
+++ b/src/app/shared/components/heartBeat/heartBeat.component.html
@@ -1,12 +1,11 @@
 <div class="header">
-  <p>Will you me my valentine?</p>
+  <p>Will you be my valentine?</p>
 </div>
 
 <button onclick="location.href='mailto:ahpienaar@gmail.com?subject=The Answer&body=Yes%20Yes%20Yes!!!'"
   class="button">Answer</button>
-<img class="mySlides" [src]="img1">
-<!-- <img class="mySlides" [src]="img1"> -->
-<!-- <img class="mySlides" [src]="img2"> -->
+<img class="profilePicContainer" [src]="img4" alt="">
+<img class="backgroundImg" [src]="img1">
 <div>
   <div class="center">
     <div class="heart">
