--- a/src/app/shared/components/heartBeat/heartBeat.component.scss
+++ b/src/app/shared/components/heartBeat/heartBeat.component.scss
@@ -12,7 +12,7 @@
 button {
   position: absolute;
   top: 63%;
-  left: 28%;
+  left: 29%;
   text-transform: uppercase;
   border: 2px solid transparent;
   font-weight: $button-font-weight;
@@ -49,11 +49,25 @@ button:hover {
   overflow: hidden;
 }
 
+.profilePicContainer {
+  position: absolute;
+  top: 18%;
+  left: 29%;
+  height: 24%;
+  border-radius: 100px;
+  border: 6px solid white;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .imgHeader {
   width: 25%;
 }
 
-.mySlides {
+.backgroundImg {
   width: 100%;
 }
 .heart {
@@ -93,9 +107,6 @@ button:hover {
   height: 100%;
   background: rgba(0, 0, 0, 0.3);
 }
-/* .mySlides {
-  display: none;
-} */
 
 @keyframes ani {
   0% {
